# Linear-Algebra

./: .clang-format  CMakeLists.txt  Main.cpp  Manger.h  Manger_tests.cpp  Matrix.h  README.md  Vector.cpp  Vector.h  conanfile.txt  lll.cpp  lll.h  lll_tests.cpp  matrix_tests.cpp  vector.cpp  vector.h  vector_tests.cpp
